Git Tests/force-app/main/default/default/objects/EnderecoEntrega__c/EnderecoEntrega__c.object-meta.xml
<CustomObject>
    <label>Endereço de entrega</label>
    <nameField>
        <label>Nome de  Endereço</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Endereço de entrega</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>