Git Tests/force-app/main/default/default/objects/EnderecoEntrega__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF( ISBLANK(Logradouro__c), Name,
				
		  IF( AND( NOT(ISBLANK(Cidade__c)), NOT(ISBLANK(Estado__c)), NOT(ISBLANK(CEP__c)) ), Logradouro__c + &apos;, &apos; +  Cidade__c  + &apos;, &apos; +  Estado__c + &apos;, &apos; +  CEP__c, 
		   IF( AND( ISBLANK(Cidade__c), ISBLANK(Estado__c), ISBLANK(CEP__c) ), Logradouro__c, 
								
								 IF( AND( NOT(ISBLANK(Cidade__c)), NOT(ISBLANK(Estado__c)), ISBLANK(CEP__c) ), Logradouro__c + &apos;, &apos; + Cidade__c  + &apos;, &apos; +  Estado__c, 
													IF( AND( NOT(ISBLANK(Cidade__c)), ISBLANK(Estado__c), NOT(ISBLANK(CEP__c)) ), Logradouro__c + &apos;, &apos; + Cidade__c + &apos;, &apos; +  CEP__c, 
																	IF( AND( ISBLANK(Cidade__c), NOT(ISBLANK(Estado__c)), NOT(ISBLANK(CEP__c)) ), Logradouro__c + &apos;, &apos; +  Estado__c + &apos;, &apos; + CEP__c, 
																				
																				 IF( AND( NOT(ISBLANK(Cidade__c)), ISBLANK(Estado__c), ISBLANK(CEP__c) ), Logradouro__c + &apos;, &apos; + Cidade__c, 
													            IF( AND( ISBLANK(Cidade__c), NOT(ISBLANK(Estado__c)), ISBLANK(CEP__c) ), Logradouro__c + &apos;, &apos; + Estado__c, 
																	            IF( AND( ISBLANK(Cidade__c), ISBLANK(Estado__c), NOT(ISBLANK(CEP__c)) ), Logradouro__c + &apos;, &apos; + CEP__c, &apos;&apos;
																			            )
															            )
											            )
																				
																			)
															)
											)
								
							)
     )
			
		)</formula>
    <label>Endereço completo</label>
    <type>Text</type>
</CustomField>