Git Tests/force-app/main/default/default/objects/EnderecoEntrega__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <label>Cidade</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>