Git Tests/force-app/main/default/default/objects/EnderecoEntrega__c/fields/ClientAddress__c.field-meta.xml
<CustomField>
    <fullName>ClientAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endereço da Conta</label>
    <type>Checkbox</type>
</CustomField>