Git Tests/force-app/main/default/default/objects/EnderecoEntrega__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Endereços de entrega</relationshipLabel>
    <relationshipName>Endere_os_de_entrega</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>