Git Tests/force-app/main/default/default/objects/EnderecoEntrega__c/fields/Complemento__c.field-meta.xml
<CustomField>
    <fullName>Complemento__c</fullName>
    <label>Complemento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>