Git Tests/force-app/main/default/default/objects/EnderecoEntrega__c/fields/EnderecoPrioritario__c.field-meta.xml
<CustomField>
    <fullName>EnderecoPrioritario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endereço prioritário</label>
    <type>Checkbox</type>
</CustomField>