Git Tests/force-app/main/default/default/objects/EnderecoEntrega__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>