Git Tests/force-app/main/default/default/objects/EnderecoEntrega__c/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <label>Logradouro</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>