Git Tests/force-app/main/default/default/objects/EnderecoEntrega__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Número</label>
    <length>80</length>
    <type>Text</type>
</CustomField>