Git Tests/force-app/main/default/default/objects/EnderecoEntrega__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País</label>
    <length>80</length>
    <type>Text</type>
</CustomField>